--- a/src/components/Player.css
+++ b/src/components/Player.css
@@ -2,34 +2,47 @@
 
 .players-container-header {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     /* margin-top: 8%; */
 }
 
 .player-container {
     width: 100%;
-    height: 80px;
+    /* height: 80px; */
     background: rgb(93, 169, 204);
     border-bottom: .5px solid rgba(0,0,0, 0.8);
     border-left: 2px solid rgba(0,0,0, 0.8);
     border-right: 2px solid rgba(0,0,0, 0.8);
     border-top: 1px solid rgba(0,0,0, 0.8);
     display: flex;
+    /* flex-direction: column; */
     justify-content: space-between;
     align-items: center;
     color: white;
-    flex-wrap: wrap;
-    font-size: 10px;
-
+    font-size: 12px;
 }
+
+#btnflx {
+   display: flex;
+   flex-direction: column;
+   font-size: 10px;
+   text-align: center;
+}
+
+/* .player-container > button {
+    font-size: 8px;
+    display: flex;
+    flex-direction: column;
+    text-align: justify;  
+} */
 
 .role:hover {
     cursor: pointer;
 }
 
 .player-container > img {
-    height: 60px;
-    max-width: 60x;
+    height: 90px;
+    width: 90px;
     background: black;
     display: flex;
     flex-direction: column;
@@ -66,11 +79,15 @@
 .pic {
     height:100px;
     width:100px;
-    margin: 5px;
+    margin: 3px;
 }
 
 .player-container > div {
-    margin: 5px;
+    margin: 3px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     
 }
 
@@ -107,7 +124,7 @@
 .selectStyle > img {
     width: 180px;
     height: 180px;
-    border: 1.5px solid white;
+    border: 3.5px solid white;
     border-radius: 25px;
 }
 
@@ -125,6 +142,9 @@
     color: white;
     margin-top: 140px;
     border-radius: 40%;
-    
-   
+}
+
+#input {
+    margin-left: 24px;
+    margin-bottom: 2px;
 }
