--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Lobster&display=swap');
 
+
 .App {
     height: 100%;
     width: 100vw;
+    /* background: rgba(190, 190, 190, 0.1); */
     background: rgba(226, 84, 84, 1);
     border: 4px solid black;
 }
 
 .top-header {
-    height: 165px;
+    height: 153px;
 }
 
 header > div > img {
